<resources>
    <!--<string name="app_name">Cargoquin Photo Process</string>-->
    <string name="app_name">CQ Stage</string>
    <string name="username_hint">Enter User Id / Cell Phone</string>
    <string name="password_hint">Enter Password</string>
    <string name="sign_in">Sign In</string>
    <string name="forgot_pwd">Forgot Password ?</string>
    <string name="trailer_Folio">Enter Trailer Folio Number</string>
    <string name="container">Enter Trailer Number</string>
    <string name="capture_image">Capture Picture</string>
    <string name="save">Save</string>
    <string name="sid">Enter or Scan SId</string>
    <string name="folio">Enter or Scan Truck Folio</string>
    <string name="scan">Scan</string>
    <string name="splash_name">Photos Process App</string>
    <string name="ok_btn">OK</string>
    <string name="home">Home</string>
    <string name="receiving">Receiving</string>
    <string name="damaged">Damaged</string>
    <string name="warehouse">Warehouse</string>
    <string name="shipping">Shipping</string>
    <string name="quality_finding">Quality Findings</string>
    <string name="select_warehouse">Select Warehouse</string>
    <string name="select_quality">Select Quality Finding Folio</string>
    <string name="comment">Type comment about photos</string>
    <string name="close_popup_edittext">Please write something why you Close this.</string>
    <string name="new_user">New</string>
    <string name="existing">Existing</string>
    <string name="close">Close</string>
    <string name="done">Done</string>
    <string name="reopen">ReOpen</string>
    <string name="cancel">Cancel</string>
    <string name="select_quality_List"><u>Show Existing Folio</u></string>
    <string name="not_there">Not There</string>
    <string name="nt_folio">NT FOLIO</string>
    <string name="sid_header">SID</string>
    <string name="transfer_to_location">Transfer To Location</string>
    <string name="select_not_folio">Select Not Folio</string>
    <string name="location">Enter or Scan Transfer Location</string>
    <string name="Nt_Folio"><u>Nt Folio</u></string>
    <string name="gatepass">GatePass</string>
    <string name="D_warehouse"><u>Warehouse</u></string>
    <string name="scan_barcode_documents">SCan Barcode Documents</string>
</resources>
